@startuml test
skinparam classAttributeIconSize 0
skinparam componentStyle uml2
'left to right direction
hide circle

class Flight {
    +flightnumber
    +price
    +afterWhichTime
}

class PriceReduction {
    +endDate
}
together {
    class StaticPriceReduction extends PriceReduction {
        +percentage
    }

    class DynamicPriceReduction extends PriceReduction {
        +source
    }
}

together {
    class Route {
    }

    class RouteLeg {
        +arrvial
        +departure
    }

    class Airport {
        +name
        +city
        +country
    }
}


class Booking {
    +bookingDate: Date
    +totalPrice
}

class Ticket {
    +name
}

class Plane {
    +name
    +type
    +manufacturer
}

class Seat {
    +seatNumber
    +rowNumber
}

class Option {
    +price
    +name
}

class SeatOption extends Option

class FlightOption extends Option {
    +maxAvailible
}


class Employee {
    +name
    +email
    +password
}

together {
    class SalesManager extends Employee
    class SalesEmployee extends Employee
    class SalesOfficer extends Employee
}



Booking "*" -- "1" Flight
SalesOfficer "1" - "*" Flight: \t\t\t
SalesEmployee "1" - "*" Booking: \t
Ticket "1..*" -- "1" Booking
Flight "1..*" -- "1" Route
RouteLeg "*" -- "1" Airport: arrives at port >
RouteLeg "*" -- "1" Airport: departs from port >
Flight "1..*" - "*" PriceReduction
SeatOption "*" -- "1" Seat: \t
SeatOption "*" - "*" Ticket: chosen
Plane "1" -u- "1..*" Seat: \t
RouteLeg "*" - "*" Plane: \t
Ticket "*" - "1" Seat: \t
FlightOption "*" - "1" RouteLeg
FlightOption "*" - "*" Ticket: \t
Route "1" -l- "*" RouteLeg: \tis nth part of the route\t\t >
Route -[hidden] PriceReduction: \t\t\t
'SalesManager -l[hidden] SalesEmployee: \t
SeatOption -r[hidden]- FlightOption
@enduml